# chefcloud

./: .env.docker.staging.example  .env.example  .env.railway.example  .env.render.example  .env.vercel.example  .eslintrc.js  .gitignore  .lintstagedrc  AI_INDEX.json  AI_START_HERE.md  APP_FLOW.md  B2-API-KEY-EXAMPLES.sh  B2-SECURITY-HARDENING.md  CHANGELOG.md  CHATGPT_HANDOFF_COMPLETE.md  CONTRIBUTING.md  CURL_CHEATSHEET.md  ChefCloud_Engineering_Blueprint_v0.1.md  DEMO_DATA_PLAYBOOK.md  DEMO_QUICK_REFERENCE.md  DEPLOYMENT.md  DEPLOYMENT_RENDER.md  DEPLOYMENT_SESSION_REPORT.md  DEPLOYMENT_SUMMARY.txt  DEPLOY_QUICK.md  DEPLOY_QUICK_RENDER.md  DEV_GUIDE.md  DEV_GUIDE_M11.md  E22-FRANCHISE-FE-S1-COMPLETION.md  E22-FRANCHISE-FE-S2-COMPLETION.md  E22-FRANCHISE-FE-S3-COMPLETION.md  E22-FRANCHISE-S1-COMPLETION.md  E22-FRANCHISE-S2-COMPLETION.md  E22-FRANCHISE-S4-COMPLETION.md  E22-FRANCHISE-S5-COMPLETION.md  E22-FRANCHISE-S6-COMPLETION.md  E22-S2-COMPLETION.md  E22-S3-COMPLETION.md  E23-DEVPORTAL-FE-S3-COMPLETION.md  E23-DEVPORTAL-FE-S4-COMPLETION.md  (+159 more)
.devcontainer/: devcontainer.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
docs/: A2_COMPLETION_SUMMARY.md  INDEX.md  M6-FRANCHISE-MANAGEMENT.md  SESSION_STATE.yml
instructions/: 00_START_HERE.md  ACCOUNTING_CREDIT_NOTES_FEATURE_DOSSIER_M8.5.md  ACCOUNTING_FEATURE_DOSSIER_M8.2b.md  BACKEND_API_MAP.md  CODEBASE_ARCHITECTURE_MAP.md  DATA_PERSISTENCE_AND_CONSISTENCY_STANDARD.md  DEMO_TENANTS_AND_DATASETS.md  E2E_DATASET_RULES.md  (+238 more)
(+1877 files in other folders)
