[package]
name = "chefcloud-desktop"
version = "0.1.0"
description = "ChefCloud Desktop POS"
authors = ["Ssemakula Allan"]
license = "MIT"
repository = "https://github.com/mmazune/chefcloud"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.21"
dirs = "5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
